# qt_fft_equalizer

./: .gitignore  README.md
fft_equalizer/: CMakeLists.txt  equalizer.cpp  equalizer.h  equalizer_component.cpp  equalizer_component.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
